--- a/assets/css/custom-fixes.css
+++ b/assets/css/custom-fixes.css
@@ -780,9 +780,9 @@
 
 /* Header Description */
 .header-description {
-    color: #6c757d;
+    color: #b8bcc8;
     font-size: 1.1rem;
-    line-height: 1.6;
+    line-height: 1.4;
     margin-bottom: 1.5rem;
     font-weight: 400;
     max-width: 90%;
